<resources>
    <string name="app_name">LabsCM20181</string>
    <string name="title_activity_restaurant">Restaurant</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configuraciones</string>

    <string name="Nombre">Nombre</string>
    <string name="sh">Seleccion Horario</string>
    <string name="m">Mañana</string>
    <string name="t">Tarde</string>
    <string name="n">Noche</string>
    <string name="tipop">Seleccione Tipo de Plato</string>
    <string name="e">Entrada</string>
    <string name="pf">Plato Fuerte</string>
    <string name="timep">Seleccione Tiempo de Preparación</string>
    <string name="p">Precio</string>
    <string name="i">Ingredientes</string>
    <string name="rp">Registrar Plato</string>
    <string name="rb">Registrar Bebida</string>
    <string name="tvl2">Información</string>
    <string name="plato">Platos</string>
    <string name="bebidas">Bebidas</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="perfil">Perfil</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="acercaDe">Acerca De</string>
    <string name="configperfil">Configurar Perfil</string>
    <string name="autorize">Autorizar Notificaciones</string>
    <string name="active">Activar Notificaciones</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
