<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_platos"
            android:icon="@drawable/ic_launcher_plato"
            android:title="@string/plato" />
        <item
            android:id="@+id/nav_bebidas"
            android:icon="@drawable/ic_free_breakfast"
            android:title="@string/bebidas" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_launcher_perfil"
            android:title="@string/perfil"
            />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings"
            />
        <item
            android:id="@+id/nav_cerrar"
            android:icon="@drawable/ic_launcher_cerrar"
            android:title="@string/cerrarSesion"
            />
        <item
            android:id="@+id/nav_acerca"
            android:icon="@drawable/ic_launcher_acercade"
            android:title="@string/acercaDe"
            />

    </group>



</menu>
