<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.udea.compumovil.gr09_20181.lab2.FragmentSettings">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/configPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configperfil"/>

        <CheckBox
            android:id="@+id/autorizarnotificaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autorize"/>

        <CheckBox
            android:id="@+id/activarnotificaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active"/>

    </LinearLayout>

</FrameLayout>
